# cs5220_final_project

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt  mac_sim.cpp  solver_bench.cpp
bench/: CMakeLists.txt  spd_generator.cpp  spd_generator.h
cmake/: perlmutter.cmake
report/: report.md
scripts/analysis/: make_all_plots.sh  plot_scaling.py
scripts/perlmutter/: p012_sanity.sh  p3_sanity.sh  p5_sanity.sh  p6_sanity.sh  run_mac.sh  run_strong_scale.sh  run_weak_scale.sh
scripts/viz/: viz_mac.py
src/: CMakeLists.txt
src/constraints/: assembler.cpp  assembler.h  constraint.cpp  constraint.h
src/la/: blas.cpp  blas.h  sparse_matrix.cpp  sparse_matrix.h
src/mac/: binding.cpp  binding.h  mac_world.h  protein.cpp  protein.h  scenario.cpp  scenario.h
src/physics/: integrator.cpp  integrator.h  math3d.h  rigid_body.h
src/solvers/direct/: dense_cholesky.cpp  dense_cholesky.h
src/solvers/iterative/: iterative.cpp  iterative.h
src/solvers/mpi/: dist_solvers.cpp  dist_solvers.h  distributed_blas.cpp  distributed_blas.h  distributed_csr.cpp  distributed_csr.h  partition.h
tests/: CMakeLists.txt  test_mac.cpp  test_mpi.cpp  test_physics.cpp  test_smoke.cpp  test_solvers.cpp
